[package]
name = "nibble"
version = "0.1.0"
authors = ["Clar Charr <clar@charr.xyz>"]
description = "Ways of parsing four-bit integers, i.e. nibbles."
documentation = "https://docs.charr.xyz/nibble/nibble"
repository = "https://github.com/clarcharr/nibble"
readme = "README.md"
categories = ["no-std", "parsing"]
license = "CC0-1.0"
exclude = [".gitignore"]

[dependencies]
arrayvec = { version = "0.4.2", default-features = false }
cfg-if = "0.1.2"
num-traits = "0.1.40"

[features]
default = ["std"]
std = ["arrayvec/std"]

[[package.metadata.test-all.cases]]
versions = ["1.14.0", "stable", "beta"]
try-features = [["std"]]

[[package.metadata.test-all.cases]]
versions = ["nightly"]
try-features = [["std"], []]
